test/spec/simd/simd_bit_shift.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/proposals/simd/simd_bit_shift.wast
;;; ARGS*: --enable-simd
(;; STDOUT ;;;
out/test/spec/simd/simd_bit_shift.wast:976: assert_invalid passed:
  error: type mismatch in i8x16.shl, expected [v128, i32] but got [i32, i32]
  000001e: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_bit_shift.wast:977: assert_invalid passed:
  error: type mismatch in i8x16.shr_s, expected [v128, i32] but got [i32, i32]
  000001e: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_bit_shift.wast:978: assert_invalid passed:
  error: type mismatch in i8x16.shr_u, expected [v128, i32] but got [i32, i32]
  000001e: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_bit_shift.wast:979: assert_invalid passed:
  error: type mismatch in i16x8.shl, expected [v128, i32] but got [i32, i32]
  000001e: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_bit_shift.wast:980: assert_invalid passed:
  error: type mismatch in i16x8.shr_s, expected [v128, i32] but got [i32, i32]
  000001e: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_bit_shift.wast:981: assert_invalid passed:
  error: type mismatch in i16x8.shr_u, expected [v128, i32] but got [i32, i32]
  000001e: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_bit_shift.wast:982: assert_invalid passed:
  error: type mismatch in i32x4.shl, expected [v128, i32] but got [i32, i32]
  000001e: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_bit_shift.wast:983: assert_invalid passed:
  error: type mismatch in i32x4.shr_s, expected [v128, i32] but got [i32, i32]
  000001e: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_bit_shift.wast:984: assert_invalid passed:
  error: type mismatch in i32x4.shr_u, expected [v128, i32] but got [i32, i32]
  000001e: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_bit_shift.wast:985: assert_invalid passed:
  error: type mismatch in i64x2.shl, expected [v128, i32] but got [i32, i32]
  000001f: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_bit_shift.wast:986: assert_invalid passed:
  error: type mismatch in i64x2.shr_s, expected [v128, i32] but got [i32, i32]
  000001f: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_bit_shift.wast:987: assert_invalid passed:
  error: type mismatch in i64x2.shr_u, expected [v128, i32] but got [i32, i32]
  000001f: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_bit_shift.wast:991: assert_malformed passed:
  out/test/spec/simd/simd_bit_shift/simd_bit_shift.14.wat:1:33: error: unexpected token "i8x16.shl_s", expected an instr.
  (memory 1) (func (result v128) (i8x16.shl_s (v128.const i32x4 0 0 0 0)))
                                  ^^^^^^^^^^^
out/test/spec/simd/simd_bit_shift.wast:992: assert_malformed passed:
  out/test/spec/simd/simd_bit_shift/simd_bit_shift.15.wat:1:33: error: unexpected token "i8x16.shl_r", expected an instr.
  (memory 1) (func (result v128) (i8x16.shl_r (v128.const i32x4 0 0 0 0)))
                                  ^^^^^^^^^^^
out/test/spec/simd/simd_bit_shift.wast:993: assert_malformed passed:
  out/test/spec/simd/simd_bit_shift/simd_bit_shift.16.wat:1:33: error: unexpected token "i8x16.shr", expected an instr.
  (memory 1) (func (result v128) (i8x16.shr   (v128.const i32x4 0 0 0 0)))
                                  ^^^^^^^^^
out/test/spec/simd/simd_bit_shift.wast:994: assert_malformed passed:
  out/test/spec/simd/simd_bit_shift/simd_bit_shift.17.wat:1:33: error: unexpected token "i16x8.shl_s", expected an instr.
  (memory 1) (func (result v128) (i16x8.shl_s (v128.const i32x4 0 0 0 0)))
                                  ^^^^^^^^^^^
out/test/spec/simd/simd_bit_shift.wast:995: assert_malformed passed:
  out/test/spec/simd/simd_bit_shift/simd_bit_shift.18.wat:1:33: error: unexpected token "i16x8.shl_r", expected an instr.
  (memory 1) (func (result v128) (i16x8.shl_r (v128.const i32x4 0 0 0 0)))
                                  ^^^^^^^^^^^
out/test/spec/simd/simd_bit_shift.wast:996: assert_malformed passed:
  out/test/spec/simd/simd_bit_shift/simd_bit_shift.19.wat:1:33: error: unexpected token "i16x8.shr", expected an instr.
  (memory 1) (func (result v128) (i16x8.shr   (v128.const i32x4 0 0 0 0)))
                                  ^^^^^^^^^
out/test/spec/simd/simd_bit_shift.wast:997: assert_malformed passed:
  out/test/spec/simd/simd_bit_shift/simd_bit_shift.20.wat:1:33: error: unexpected token "i32x4.shl_s", expected an instr.
  (memory 1) (func (result v128) (i32x4.shl_s (v128.const i32x4 0 0 0 0)))
                                  ^^^^^^^^^^^
out/test/spec/simd/simd_bit_shift.wast:998: assert_malformed passed:
  out/test/spec/simd/simd_bit_shift/simd_bit_shift.21.wat:1:33: error: unexpected token "i32x4.shl_r", expected an instr.
  (memory 1) (func (result v128) (i32x4.shl_r (v128.const i32x4 0 0 0 0)))
                                  ^^^^^^^^^^^
out/test/spec/simd/simd_bit_shift.wast:999: assert_malformed passed:
  out/test/spec/simd/simd_bit_shift/simd_bit_shift.22.wat:1:33: error: unexpected token "i32x4.shr", expected an instr.
  (memory 1) (func (result v128) (i32x4.shr   (v128.const i32x4 0 0 0 0)))
                                  ^^^^^^^^^
out/test/spec/simd/simd_bit_shift.wast:1000: assert_malformed passed:
  out/test/spec/simd/simd_bit_shift/simd_bit_shift.23.wat:1:33: error: unexpected token "i64x2.shl_s", expected an instr.
  (memory 1) (func (result v128) (i64x2.shl_s (v128.const i32x4 0 0 0 0)))
                                  ^^^^^^^^^^^
out/test/spec/simd/simd_bit_shift.wast:1001: assert_malformed passed:
  out/test/spec/simd/simd_bit_shift/simd_bit_shift.24.wat:1:33: error: unexpected token "i64x2.shl_r", expected an instr.
  (memory 1) (func (result v128) (i64x2.shl_r (v128.const i32x4 0 0 0 0)))
                                  ^^^^^^^^^^^
out/test/spec/simd/simd_bit_shift.wast:1002: assert_malformed passed:
  out/test/spec/simd/simd_bit_shift/simd_bit_shift.25.wat:1:33: error: unexpected token "i64x2.shr", expected an instr.
  (memory 1) (func (result v128) (i64x2.shr   (v128.const i32x4 0 0 0 0)))
                                  ^^^^^^^^^
out/test/spec/simd/simd_bit_shift.wast:1003: assert_malformed passed:
  out/test/spec/simd/simd_bit_shift/simd_bit_shift.26.wat:1:33: error: unexpected token "f32x4.shl", expected an instr.
  (memory 1) (func (result v128) (f32x4.shl   (v128.const i32x4 0 0 0 0)))
                                  ^^^^^^^^^
out/test/spec/simd/simd_bit_shift.wast:1004: assert_malformed passed:
  out/test/spec/simd/simd_bit_shift/simd_bit_shift.27.wat:1:33: error: unexpected token "f32x4.shr_s", expected an instr.
  (memory 1) (func (result v128) (f32x4.shr_s (v128.const i32x4 0 0 0 0)))
                                  ^^^^^^^^^^^
out/test/spec/simd/simd_bit_shift.wast:1005: assert_malformed passed:
  out/test/spec/simd/simd_bit_shift/simd_bit_shift.28.wat:1:33: error: unexpected token "f32x4.shr_u", expected an instr.
  (memory 1) (func (result v128) (f32x4.shr_u (v128.const i32x4 0 0 0 0)))
                                  ^^^^^^^^^^^
out/test/spec/simd/simd_bit_shift.wast:1010: assert_invalid passed:
  error: type mismatch in i8x16.shl, expected [v128, i32] but got [i32]
  000001c: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_bit_shift.wast:1018: assert_invalid passed:
  error: type mismatch in i8x16.shl, expected [v128, i32] but got [v128]
  000002c: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_bit_shift.wast:1026: assert_invalid passed:
  error: type mismatch in i8x16.shl, expected [v128, i32] but got []
  000001a: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_bit_shift.wast:1034: assert_invalid passed:
  error: type mismatch in i16x8.shr_u, expected [v128, i32] but got [i32]
  000001c: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_bit_shift.wast:1042: assert_invalid passed:
  error: type mismatch in i16x8.shr_u, expected [v128, i32] but got [v128]
  000002c: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_bit_shift.wast:1050: assert_invalid passed:
  error: type mismatch in i16x8.shr_u, expected [v128, i32] but got []
  000001a: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_bit_shift.wast:1058: assert_invalid passed:
  error: type mismatch in i32x4.shr_s, expected [v128, i32] but got [i32]
  000001c: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_bit_shift.wast:1066: assert_invalid passed:
  error: type mismatch in i32x4.shr_s, expected [v128, i32] but got [v128]
  000002c: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_bit_shift.wast:1074: assert_invalid passed:
  error: type mismatch in i32x4.shr_s, expected [v128, i32] but got []
  000001a: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_bit_shift.wast:1082: assert_invalid passed:
  error: type mismatch in i64x2.shl, expected [v128, i32] but got [i32]
  000001d: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_bit_shift.wast:1090: assert_invalid passed:
  error: type mismatch in i64x2.shr_u, expected [v128, i32] but got [v128]
  000002d: error: OnBinaryExpr callback failed
out/test/spec/simd/simd_bit_shift.wast:1098: assert_invalid passed:
  error: type mismatch in i64x2.shr_s, expected [v128, i32] but got []
  000001b: error: OnBinaryExpr callback failed
250/250 tests passed.
;;; STDOUT ;;)
